--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-        <title>a exercices</title>
+        <title>Notas</title>
         <meta charset="utf-8">
         <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
         <style>
